{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 28,
  "lineage": "60f6bccb-70d3-02bb-88a6-c80d3e3eade4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:route-table/rtb-00d5362543697d083",
            "default_route_table_id": "rtb-00d5362543697d083",
            "id": "rtb-00d5362543697d083",
            "owner_id": "251979040059",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07bbe9dabac4eca36",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DefaultRT"
            },
            "tags_all": {
              "Name": "DefaultRT"
            },
            "vpc_id": "vpc-04fe424a8a6cfe99a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_wp",
            "aws_internet_gateway.igw-wp",
            "aws_nat_gateway.nat-gw-wp",
            "aws_subnet.publicSN",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-086c7e75299cf2088",
            "domain": "vpc",
            "id": "eipalloc-01d051aaf3544c356",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c97df3d0800043d4",
            "private_dns": "ip-10-0-1-20.us-east-2.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-3-17-21-130.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.21.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp-site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:251979040059:instance/i-02a0da673cfffc9f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a0da673cfffc9f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061465777f73df435",
            "private_dns": "ip-10-0-1-126.us-east-2.compute.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-18-119-143-231.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.143.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcf4c95a2fe75662",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e25596528c9785b1",
            "tags": {
              "Name": "wp-site"
            },
            "tags_all": {
              "Name": "wp-site"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077cf5e2f3192e2ef"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_subnet.publicSN",
            "aws_vpc.wp-vpc",
            "data.aws_ssm_parameter.linuxAmi",
            "aws_db_instance.wp-db",
            "aws_db_subnet_group.wp-subnet-db-group",
            "aws_security_group.sg-db-wp",
            "aws_security_group.sg-publicSN-wp",
            "aws_subnet.privateSN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:internet-gateway/igw-0054e5e71d4e66149",
            "id": "igw-0054e5e71d4e66149",
            "owner_id": "251979040059",
            "vpc_id": "vpc-04fe424a8a6cfe99a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d051aaf3544c356",
            "connectivity_type": "public",
            "id": "nat-07bbe9dabac4eca36",
            "network_interface_id": "eni-0c97df3d0800043d4",
            "private_ip": "10.0.1.20",
            "public_ip": "3.17.21.130",
            "subnet_id": "subnet-0e25596528c9785b1"
          },
          "dependencies": [
            "aws_vpc.wp-vpc",
            "aws_eip.eip_wp",
            "aws_internet_gateway.igw-wp",
            "aws_subnet.publicSN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:route-table/rtb-0477fd7b5587922ee",
            "id": "rtb-0477fd7b5587922ee",
            "owner_id": "251979040059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0054e5e71d4e66149",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "vpc_id": "vpc-04fe424a8a6cfe99a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-wp",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT_to_publicSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b70ffe4496808234",
            "route_table_id": "rtb-0477fd7b5587922ee",
            "subnet_id": "subnet-0e25596528c9785b1"
          },
          "dependencies": [
            "aws_internet_gateway.igw-wp",
            "aws_route_table.publicRT",
            "aws_subnet.publicSN",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-db-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:security-group/sg-00af5905c28f86578",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00af5905c28f86578",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077cf5e2f3192e2ef"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "security-group-db",
            "name_prefix": "",
            "owner_id": "251979040059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-DB"
            },
            "tags_all": {
              "Name": "SG-DB"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fe424a8a6cfe99a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-publicSN-wp",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-publicSN-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:security-group/sg-077cf5e2f3192e2ef",
            "description": "sg for the public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077cf5e2f3192e2ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmpv6",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-wp",
            "name_prefix": "",
            "owner_id": "251979040059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Public"
            },
            "tags_all": {
              "Name": "SG-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fe424a8a6cfe99a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:subnet/subnet-016e537af2991fb6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-016e537af2991fb6f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251979040059",
            "tags": {
              "Name": "PrivateSN"
            },
            "tags_all": {
              "Name": "PrivateSN"
            },
            "vpc_id": "vpc-04fe424a8a6cfe99a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:subnet/subnet-0e25596528c9785b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e25596528c9785b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251979040059",
            "tags": {
              "Name": "PublicSN"
            },
            "tags_all": {
              "Name": "PublicSN"
            },
            "vpc_id": "vpc-04fe424a8a6cfe99a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251979040059:vpc/vpc-04fe424a8a6cfe99a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9876fffe63aa260",
            "default_route_table_id": "rtb-00d5362543697d083",
            "default_security_group_id": "sg-0eee9ec58068f8414",
            "dhcp_options_id": "dopt-d1c083ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04fe424a8a6cfe99a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d5362543697d083",
            "owner_id": "251979040059",
            "tags": {
              "Name": "wp-vpc"
            },
            "tags_all": {
              "Name": "wp-vpc"
            }
          }
        }
      ]
    }
  ]
}